<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reinitialize_network"
        android:orderInCategory="100"
        android:title="@string/reinitialize_network"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_object"
        android:orderInCategory="100"
        android:title="@string/action_create_object"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_connection"
        android:orderInCategory="100"
        android:title="@string/action_create_connection"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/action_update"
        app:showAsAction="never" />
</menu>